--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "octra-proxy",
   "version": "1.0.0",
   "dependencies": {
-    "http-proxy-middleware": "^3.0.0"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "axios": "^1.6.8",
+    "serverless-http": "^3.1.0"
   }
 }
