--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "name": "octra-proxy",
   "version": "1.0.0",
-  "type": "module",
   "dependencies": {
-    "axios": "^1.10.0",
-    "express": "^5.1.0",
-    "cors": "^2.8.5",
-    "serverless-http": "^3.2.0"
+    "axios": "^1.10.0"
   }
 }
