--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
-  "name": "octra-proxy",
+  "name": "octra-api-proxy",
   "version": "1.0.0",
+  "main": "api/index.js",
+  "scripts": {
+    "start": "node api/index.js"
+  },
   "dependencies": {
-    "axios": "^1.10.0"
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "serverless-http": "^3.0.0"
   }
 }
