--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
-  "rewrites": [
-    { "source": "/api/:path*", "destination": "/api/[...path].js" }
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/index.js"
+    }
   ]
 }
